Added my name to HTML file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <html>
+    <head>
+        <style>
+            h2{
+                color:'red'
+            }
+            </style>
+    </head>
+    <body>
+        <h2>Hi my name is Shannon</h2>
+    </body>
 </html>
