Move css to external file and add code formatting

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html>
     <head>
-        <style>
-            h2{
-                color:'red'
-            }
-            </style>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
         <h2>Hi my name is Shannon</h2>
