--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <h2>Hi my name is Shannon</h2>
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
+  <body>
+    <h2>Hi my name is Dario</h2>
+  </body>
 </html>
