--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <h2>Hi my name is Shannon</h2>
+        <h2>Hi my name is Jake</h2>
     </body>
 </html>
